feat: add linux binds and readme :)

--- a/kitty.conf
+++ b/kitty.conf
@@ -9,28 +9,41 @@ url_style curly
 
 # New tab
 map cmd+t new_tab_with_cwd
-map ctrl+shift+t new_tab_with_cwd
+map ctrl+t new_tab_with_cwd
 
 # New window
 map cmd+n new_window_with_cwd
-map ctrl+shift+n new_window_with_cwd
+map ctrl+n new_window_with_cwd
 
 # Navigation
-map cmd+1 goto_tab 1
+map cmd+1 goto_tab 1 
+map alt+1 goto_tab 1
 map cmd+2 goto_tab 2
+map alt+2 goto_tab 2
 map cmd+3 goto_tab 3
+map alt+3 goto_tab 3
 map cmd+4 goto_tab 4
+map alt+4 goto_tab 4
 map cmd+5 goto_tab 5
+map alt+5 goto_tab 5
 map cmd+6 goto_tab 6
+map alt+6 goto_tab 6
 map cmd+7 goto_tab 7
+map alt+7 goto_tab 7
 map cmd+8 goto_tab 8
+map alt+8 goto_tab 8
 map cmd+9 goto_tab 9
+map alt+9 goto_tab 9
 map cmd+] next_tab
+map alt+] next_tab
 map cmd+[ previous_tab
+map alt+[ previous_tab
 
 # Close tab
 map cmd+w close_tab
+map alt+w close_tab
 map cmd+shift+w close_window
+map ctrl+w close_window
 
 # Startup session
 startup_session ~/.config/kitty/startup.session
