--- a/kitty.conf
+++ b/kitty.conf
@@ -1,3 +1,4 @@
+# Window padding
 window_padding_width 5
 
 # Buffer
@@ -16,6 +17,9 @@ map ctrl+t new_tab_with_cwd
 # New window
 map cmd+n new_window_with_cwd
 map ctrl+n new_window_with_cwd
+
+# Tabs 
+tab_title_max_length 24
 
 # Navigation
 map cmd+1 goto_tab 1 
