feat: change padding and layout

--- a/kitty.conf
+++ b/kitty.conf
@@ -1,5 +1,5 @@
 # Window padding
-window_padding_width 5
+window_padding_width 10
 
 # Buffer
 scrollback_lines 10000
@@ -20,6 +20,9 @@ map ctrl+n new_window_with_cwd
 
 # Tabs 
 tab_title_max_length 24
+
+# Layout
+enabled_layouts tall
 
 # Navigation
 map cmd+1 goto_tab 1 
