Update kitty.conf with new font, layout, and key mappings
Configured JetBrainsMono Nerd Font, adjusted window and scrollback settings, and overhauled key mappings for window management and navigation. Updated opacity, blur, and other UI preferences for improved usability.

--- a/kitty.conf
+++ b/kitty.conf
@@ -1,68 +1,91 @@
+# Fonts
+font_family 	 JetBrainsMono Nerd Font
+font_size	 12
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+disable_ligatures never
+
+symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
+
+enable_audio_bell no
+
+hide_window_decorations yes
+
 # Window padding
 window_padding_width 10
 
-# Buffer
-scrollback_lines 10000
-scrollback_pager_history_size 0
+# Window layout
+remember_window_size  no
+initial_window_width  1200
+initial_window_height 750
+enabled_layouts splits,tall,stack
+hide_window_decorations no
+
+# Scrollback
+scrollback_lines 5000
+wheel_scroll_multiplier 3.0
 
 # Detect URLs
 detect_urls yes
 open_urls_in_browser yes
 url_style curly
 
+term xterm-kitty
+
 # New tab
 map cmd+t new_tab_with_cwd
-map ctrl+t new_tab_with_cwd
 
-# New window
-map cmd+n new_window_with_cwd
-map ctrl+n new_window_with_cwd
+# Create windows horizontally and vertically
+map cmd+shift+n launch --location=hsplit --cwd=current
+map cmd+n launch --location=vsplit --cwd=current
+
+# Navigate between windows
+map cmd+left neighboring_window left
+map cmd+right neighboring_window right
+map cmd+up neighboring_window up
+map cmd+down neighboring_window down
+
+# Resize window
+map cmd+shift+up resize_window taller
+map cmd+shift+down resize_window shorter
+map cmd+shift+left resize_window narrower
+map cmd+shift+right resize_window wider
+
+# Layout
+# Navigation between windows is now handled by cmd+arrows
+# Resizing is handled by cmd+shift+arrows
+map cmd+l next_layout
 
 # Tabs 
 tab_title_max_length 24
 
-# Layout
-enabled_layouts tall
-
 # Navigation
 map cmd+1 goto_tab 1 
-map alt+1 goto_tab 1
 map cmd+2 goto_tab 2
-map alt+2 goto_tab 2
 map cmd+3 goto_tab 3
-map alt+3 goto_tab 3
 map cmd+4 goto_tab 4
-map alt+4 goto_tab 4
 map cmd+5 goto_tab 5
-map alt+5 goto_tab 5
 map cmd+6 goto_tab 6
-map alt+6 goto_tab 6
 map cmd+7 goto_tab 7
-map alt+7 goto_tab 7
 map cmd+8 goto_tab 8
-map alt+8 goto_tab 8
 map cmd+9 goto_tab 9
-map alt+9 goto_tab 9
 map cmd+] next_tab
-map alt+] next_tab
 map cmd+[ previous_tab
-map alt+[ previous_tab
 
 # Close tab
-map cmd+w close_tab
-map alt+w close_tab
-map cmd+shift+w close_window
-map ctrl+w close_window
+map cmd+shift+w close_tab
+map cmd+w close_window
 
 # Startup session
 startup_session ~/.config/kitty/startup.session
 
 # Opacity
-background_opacity 0.85
+background_opacity 0.60
 dynamic_background_opacity yes
 
 # Background blur
-background_blur 15
+background_blur 25
 
 # Window border
 window_border_width 1pt
