--- a/kitty.conf
+++ b/kitty.conf
@@ -1,5 +1,5 @@
 # Fonts
-font_family 	 JetBrainsMono Nerd Font
+font_family 	 JetBrains Mono
 font_size	 12
 bold_font        auto
 italic_font      auto
@@ -10,16 +10,14 @@ symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
 
 enable_audio_bell no
 
-hide_window_decorations yes
-
 # Window padding
-window_padding_width 10
+window_padding_width 0
 
 # Window layout
 remember_window_size  no
 initial_window_width  1200
 initial_window_height 750
-enabled_layouts splits,tall,stack
+enabled_layouts splits,stack
 hide_window_decorations no
 
 # Scrollback
@@ -57,11 +55,11 @@ map cmd+shift+right resize_window wider
 # Resizing is handled by cmd+shift+arrows
 map cmd+l next_layout
 
-# Tabs 
+# Tabs
 tab_title_max_length 24
 
 # Navigation
-map cmd+1 goto_tab 1 
+map cmd+1 goto_tab 1
 map cmd+2 goto_tab 2
 map cmd+3 goto_tab 3
 map cmd+4 goto_tab 4
@@ -85,7 +83,7 @@ background_opacity 0.60
 dynamic_background_opacity yes
 
 # Background blur
-background_blur 25
+background_blur 40
 
 # Window border
 window_border_width 1pt
